macro/tests/fails/no_args.rs
use termcolor_output as tco;

fn main() {
    tco::write!();
}
